--- a/Utilities/index.html
+++ b/Utilities/index.html
@@ -118,7 +118,10 @@
                 </button>
             </div>
         </div>
-        <div id="dialog"></div>
+        <div id="dialog">
+        <div  id = "acceptCall"></div>
+        <div  id = "rejectCall"></div>
+        </div>
         </div>
         <!-- <script src="lib/qrcode.min.js"></script> -->
         <script src='/socket.io/socket.io.js'></script>
