--- a/Utilities/index.html
+++ b/Utilities/index.html
@@ -70,7 +70,9 @@
                 <div id='video_placeholder' class='videos_placeholder'>
                     <img src='./utils/images/logo.png'></img>
                 </div>
-                <video class='remote_video display_none' autoplay id='remote_video'></video>
+                <div class="remote_video_container" id="remote_video_container1"><video class='remote_video display_none' autoplay id='remote_video'></video></div>
+                <div class="remote_video_container" id="remote_video_container2"><video class='remote_video display_none' autoplay id='remote_video2'></video></div>
+
                 <div class='local_video_container'>
                     <video class='local_video' id='local_video' muted autoplay></video>
                 </div>
